--- a/about-us.html
+++ b/about-us.html
@@ -10,7 +10,8 @@
     <title>Manup | Template</title>
 
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" rel="stylesheet">
 
 
@@ -43,12 +44,11 @@
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         <li class="active"><a href="./about-us.html">About</a></li>
+                        <li><a href="./pricing.html">Pricing</a>
                         <li><a href="./speaker.html">Speakers</a>
                             <ul class="dropdown">
-                                <li><a href="#">Jayden</a></li>
-                                <li><a href="#">Sara</a></li>
-                                <li><a href="#">Emma</a></li>
-                                <li><a href="#">Harriet</a></li>
+                                <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
+                                <li><a href="./speaker.html">Dr. Abiot Sinamo</a></li>
                             </ul>
                         </li>
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
@@ -88,8 +88,15 @@
                 <div class="col-lg-12">
                     <div class="section-title">
                         <h2>Something About Us</h2>
-                        <p class="f-para">There are several ways people can make money online. From selling products to advertising. In this article I am going to explain the concept of contextual advertising.</p>
-                        <p>First I will explain what contextual advertising is. Contextual advertising means the advertising of products on a website according to the content the page is displaying. For example if the content of a website was information on a Ford truck then the advertisements would be for Ford trucks for sale, or Ford servicing etc. It picks up the words on the page and displays ads that are similar to those words. Then when someone either performs an action or clicks on your page you will get paid.</p>
+                        <p class="f-para">There are several ways people can make money online. From selling products to
+                            advertising. In this article I am going to explain the concept of contextual advertising.
+                        </p>
+                        <p>First I will explain what contextual advertising is. Contextual advertising means the
+                            advertising of products on a website according to the content the page is displaying. For
+                            example if the content of a website was information on a Ford truck then the advertisements
+                            would be for Ford trucks for sale, or Ford servicing etc. It picks up the words on the page
+                            and displays ads that are similar to those words. Then when someone either performs an
+                            action or clicks on your page you will get paid.</p>
                     </div>
                 </div>
             </div>
@@ -101,8 +108,12 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="about-text">
-                        <h3>The 2019 Conference</h3>
-                        <p>When I first got into the online advertising business, I was looking for the magical combination that would put my website into the top search engine rankings, catapult me to the forefront of the minds or individuals looking to buy my product, and generally make me rich beyond my wildest dreams! After succeeding in the business for this long, I’m able to look back on my old self with this kind of thinking and shake my head. </p>
+                        <h3>The 2024 Conference</h3>
+                        <p>When I first got into the online advertising business, I was looking for the magical
+                            combination that would put my website into the top search engine rankings, catapult me to
+                            the forefront of the minds or individuals looking to buy my product, and generally make me
+                            rich beyond my wildest dreams! After succeeding in the business for this long, I’m able to
+                            look back on my old self with this kind of thinking and shake my head. </p>
                         <ul>
                             <li><span class="icon_check"></span> Write On Your Business Card</li>
                             <li><span class="icon_check"></span> Advertising Outdoors</li>
@@ -126,20 +137,6 @@
                         <p>These are our communicators, you can see each person information</p>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="member-item set-bg" data-setbg="img/team-member/member-1.jpg">
-            <div class="mi-social">
-                <div class="mi-social-inner bg-gradient">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                </div>
-            </div>
-            <div class="mi-text">
-                <h5>Emma Sandoval</h5>
-                <span>Speaker</span>
             </div>
         </div>
         <div class="member-item set-bg" data-setbg="img/team-member/member-2.jpg">
@@ -170,34 +167,6 @@
                 <span>Speaker</span>
             </div>
         </div>
-        <div class="member-item set-bg" data-setbg="img/team-member/member-4.jpg">
-            <div class="mi-social">
-                <div class="mi-social-inner bg-gradient">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                </div>
-            </div>
-            <div class="mi-text">
-                <h5>Emma Sandoval</h5>
-                <span>Speaker</span>
-            </div>
-        </div>
-        <div class="member-item set-bg" data-setbg="img/team-member/member-5.jpg">
-            <div class="mi-social">
-                <div class="mi-social-inner bg-gradient">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                </div>
-            </div>
-            <div class="mi-text">
-                <h5>Emma Sandoval</h5>
-                <span>Speaker</span>
-            </div>
-        </div>
     </section>
     <!-- Team Member Section End -->
 
@@ -215,17 +184,20 @@
                 <div class="col-lg-6">
                     <div class="story-left">
                         <div class="story-item">
-                            <h2>2008</h2>
+                            <h2>2020</h2>
                             <div class="si-text">
                                 <h4>Adwords Keyword Research For Beginners</h4>
-                                <p>However this is also the most expensive position. Give it a try if the second to fourth display position gives you more visitors and more customers for less money.</p>
+                                <p>However this is also the most expensive position. Give it a try if the second to
+                                    fourth display position gives you more visitors and more customers for less money.
+                                </p>
                             </div>
                         </div>
                         <div class="story-item">
-                            <h2>2011</h2>
+                            <h2>2021</h2>
                             <div class="si-text">
                                 <h4>Adwords Keyword Research For Beginners</h4>
-                                <p>Virgin Mobile took a more effective approach in marketing their cell phone service by focusing not on the people that would be making the actual purchase.</p>
+                                <p>Virgin Mobile took a more effective approach in marketing their cell phone service by
+                                    focusing not on the people that would be making the actual purchase.</p>
                             </div>
                         </div>
                     </div>
@@ -233,17 +205,21 @@
                 <div class="col-lg-6">
                     <div class="story-right">
                         <div class="story-item">
-                            <h2>2015</h2>
+                            <h2>2022</h2>
                             <div class="si-text">
                                 <h4>15 Tips To Increase Your Adwords Profits</h4>
-                                <p>There is no better advertisement campaign that is low cost and also successful at the same time. Great business ideas when utilized effectively can save lots of money.</p>
+                                <p>There is no better advertisement campaign that is low cost and also successful at the
+                                    same time. Great business ideas when utilized effectively can save lots of money.
+                                </p>
                             </div>
                         </div>
                         <div class="story-item">
-                            <h2>2019</h2>
+                            <h2>2023</h2>
                             <div class="si-text">
                                 <h4>Advertising Internet Online Opportunities To Explore</h4>
-                                <p>Many people sign up for affiliate programs with the hopes of making some serious money. They advertise a few places and then wait for the money to start pouring in.</p>
+                                <p>Many people sign up for affiliate programs with the hopes of making some serious
+                                    money. They advertise a few places and then wait for the money to start pouring in.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -252,76 +228,6 @@
         </div>
     </section>
     <!-- Story Section End -->
-
-    <!-- Pricing Section Begin -->
-    <section class="pricing-section set-bg spad" data-setbg="img/pricing-bg.jpg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <h2>Ticket Pricing</h2>
-                        <p>Get your event ticket plan</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="price-item">
-                        <h4>1 Day Pass</h4>
-                        <div class="pi-price">
-                            <h2><span>$</span>129</h2>
-                        </div>
-                        <ul>
-                            <li>One Day Conference Ticket</li>
-                            <li>Coffee-break</li>
-                            <li>Lunch and Networking</li>
-                            <li>Keynote talk</li>
-                            <li>Talk to the Editors Session</li>
-                        </ul>
-                        <a href="#" class="price-btn">Get Ticket <span class="arrow_right"></span></a>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="price-item top-rated">
-                        <div class="tr-tag">
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <h4>Full Pass</h4>
-                        <div class="pi-price">
-                            <h2><span>$</span>199</h2>
-                        </div>
-                        <ul>
-                            <li>One Day Conference Ticket</li>
-                            <li>Coffee-break</li>
-                            <li>Lunch and Networking</li>
-                            <li>Keynote talk</li>
-                            <li>Talk to the Editors Session</li>
-                            <li>Lunch and Networking</li>
-                            <li>Keynote talk</li>
-                        </ul>
-                        <a href="#" class="price-btn">Get Ticket <span class="arrow_right"></span></a>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="price-item">
-                        <h4>Group Pass</h4>
-                        <div class="pi-price">
-                            <h2><span>$</span>79</h2>
-                        </div>
-                        <ul>
-                            <li>One Day Conference Ticket</li>
-                            <li>Coffee-break</li>
-                            <li>Lunch and Networking</li>
-                            <li>Keynote talk</li>
-                            <li>Talk to the Editors Session</li>
-                        </ul>
-                        <a href="#" class="price-btn">Get Ticket <span class="arrow_right"></span></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Pricing Section End -->
 
     <!-- Testimonial Section Begin -->
     <section class="testimonial-section spad">
@@ -352,7 +258,9 @@
                                             <span>Speaker Manager</span>
                                         </div>
                                     </div>
-                                    <p>“First impression is made by logo or its absence. To know the importance of a logo just answer one question: How many big, leading and famous companies don’t have logos?”</p>
+                                    <p>“First impression is made by logo or its absence. To know the importance of a
+                                        logo just answer one question: How many big, leading and famous companies don’t
+                                        have logos?”</p>
                                 </div>
                             </div>
                             <div class="col-lg-6">
@@ -369,7 +277,9 @@
                                             <span>Speaker Manager</span>
                                         </div>
                                     </div>
-                                    <p>“There is no denying the fact that the success of an advertisement lies mostly in the headline. The headline should attract the reader and make him read the rest of the advertisement.”</p>
+                                    <p>“There is no denying the fact that the success of an advertisement lies mostly in
+                                        the headline. The headline should attract the reader and make him read the rest
+                                        of the advertisement.”</p>
                                 </div>
                             </div>
                             <div class="col-lg-6">
@@ -386,7 +296,9 @@
                                             <span>Speaker Manager</span>
                                         </div>
                                     </div>
-                                    <p>“There is no denying the fact that the success of an advertisement lies mostly in the headline. The headline should attract the reader and make him read the rest of the advertisement.”</p>
+                                    <p>“There is no denying the fact that the success of an advertisement lies mostly in
+                                        the headline. The headline should attract the reader and make him read the rest
+                                        of the advertisement.”</p>
                                 </div>
                             </div>
                         </div>
@@ -426,7 +338,7 @@
                     <div class="cs-text">
                         <div class="ct-address">
                             <span>Address:</span>
-                            <p>01 Pascale Springs Apt. 339, NY City <br/>United State</p>
+                            <p>01 Pascale Springs Apt. 339, NY City <br />United State</p>
                         </div>
                         <ul>
                             <li>
@@ -446,7 +358,9 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="cs-map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52901.38789495531!2d-118.19465514866786!3d34.03523211493029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2cf71ad83ff9f%3A0x518b28657f4543b7!2sEast%20Los%20Angeles%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1579763856144!5m2!1sen!2sbd" height="400" style="border:0;" allowfullscreen=""></iframe>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52901.38789495531!2d-118.19465514866786!3d34.03523211493029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2cf71ad83ff9f%3A0x518b28657f4543b7!2sEast%20Los%20Angeles%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1579763856144!5m2!1sen!2sbd"
+                            height="400" style="border:0;" allowfullscreen=""></iframe>
                     </div>
                 </div>
             </div>
@@ -502,9 +416,15 @@
                             <li><a href="#">Blog</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
-                        <div class="copyright-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
+                        <div class="copyright-text">
+                            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                Copyright &copy;
+                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This
+                                template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a
+                                    href="https://colorlib.com" target="_blank">Colorlib</a>
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            </p>
+                        </div>
                         <div class="ft-social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
