--- a/blog-details.html
+++ b/blog-details.html
@@ -44,16 +44,15 @@
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./about-us.html">About</a></li>
-                        <li><a href="./speaker.html">Speakers</a>
-                            <ul class="dropdown">
-                                <li><a href="#">Jayden</a></li>
-                                <li><a href="#">Sara</a></li>
-                                <li><a href="#">Emma</a></li>
-                                <li><a href="#">Harriet</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="./pricing.html">Pricing</a>
+                            <li><a href="./speaker.html">Speakers</a>
+                                <ul class="dropdown">
+                                    <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
+                                    <li><a href="./speaker.html">Dr. Abiot Sinamo</a></li>
+                                </ul>
+                            </li>
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
-                        <li class="active"><a href="./blog.html">Blog</a></li>
+                        <!-- <li class="active"><a href="./blog.html">Blog</a></li> -->
                         <!-- <li><a href="./contact.html">Contacts</a></li> -->
                     </ul>
                 </nav>
@@ -75,7 +74,7 @@
                         <h2>Improve You Business Cards</h2>
                         <ul>
                             <li><span>By <strong>John Smith</strong></span></li>
-                            <li>February 21, 2019</li>
+                            <li>February 21, 2024</li>
                             <li>No Comments</li>
                         </ul>
                     </div>
@@ -208,7 +207,7 @@
                         <div class="bi-tag bg-gradient">Foody</div>
                         <div class="bi-text">
                             <h5><a href="#">Free Classifiends Using Them To Promote</a></h5>
-                            <span><i class="fa fa-clock-o"></i> 19th May, 2019</span>
+                            <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                         </div>
                     </div>
                 </div>
@@ -217,7 +216,7 @@
                         <div class="bi-tag bg-gradient">Foody</div>
                         <div class="bi-text">
                             <h5><a href="#">Discover Your Path To Success Part 4</a></h5>
-                            <span><i class="fa fa-clock-o"></i> 19th May, 2019</span>
+                            <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                         </div>
                     </div>
                 </div>
@@ -226,7 +225,7 @@
                         <div class="bi-tag bg-gradient">Foody</div>
                         <div class="bi-text">
                             <h5><a href="#">Importance Of The Custom Company Logo Design</a></h5>
-                            <span><i class="fa fa-clock-o"></i> 19th May, 2019</span>
+                            <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                         </div>
                     </div>
                 </div>
