--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
                             </ul>
                         </li>
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
-                        <li class="active"><a href="./blog.html">Blog</a></li>
+                        <!-- <li class="active"><a href="./blog.html">Blog</a></li> -->
                         <!-- <li><a href="./contact.html">Contacts</a></li> -->
                     </ul>
                 </nav>
@@ -93,7 +93,7 @@
                                 <div class="bi-tag bg-gradient">Foody</div>
                                 <div class="bi-text">
                                     <h5><a href="./blog-details.html">Google's AI Assistant Aims to Transcend the Smart Speaker</a></h5>
-                                    <span><i class="fa fa-clock-o"></i> 19th May, 2019</span>
+                                    <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                                 </div>
                             </div>
                         </div>
@@ -102,7 +102,7 @@
                                 <div class="bi-tag bg-gradient">Foody</div>
                                 <div class="bi-text">
                                     <h5><a href="./blog-details.html">Free Classifiends Using Them To Promote</a></h5>
-                                    <span><i class="fa fa-clock-o"></i> 19th May, 2019</span>
+                                    <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                                 </div>
                             </div>
                         </div>
@@ -111,7 +111,7 @@
                         <div class="bi-tag bg-gradient">Business</div>
                         <div class="bi-text">
                             <h3><a href="./blog-details.html">"Inspired By Modiji, Will Make Biopic": BJP's Ravi Kishan</a></h3>
-                            <span><i class="fa fa-clock-o"></i> 19th May, 2019</span>
+                            <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                         </div>
                     </div>
                     <div class="row">
@@ -120,7 +120,7 @@
                                 <div class="bi-tag bg-gradient">Foody</div>
                                 <div class="bi-text">
                                     <h5><a href="./blog-details.html">The ZenBook With a Touchpad That Lights Up</a></h5>
-                                    <span><i class="fa fa-clock-o"></i> 19th May, 2019</span>
+                                    <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                                 </div>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                                 <div class="bi-tag bg-gradient">Foody</div>
                                 <div class="bi-text">
                                     <h5><a href="./blog-details.html">Is the Detel Posh a Posh Speaker?</a></h5>
-                                    <span><i class="fa fa-clock-o"></i> 19th May, 2019</span>
+                                    <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                                 </div>
                             </div>
                         </div>
@@ -139,9 +139,9 @@
                     <div class="blog-item set-bg large-item" data-setbg="img/blog/blog-3.jpg">
                         <div class="bi-tag bg-gradient">Marketing</div>
                         <div class="bi-text">
-                            <h3><a href="./blog-details.html">Lok Sabha Elections 2019 - In BJP, Only ''Tai'' Can Admonish Me: PM Modi On Sumitra
+                            <h3><a href="./blog-details.html">Lok Sabha Elections 2024 - In BJP, Only ''Tai'' Can Admonish Me: PM Modi On Sumitra
                                 Mahajan</a></h3>
-                            <span><i class="fa fa-clock-o"></i> 19th May, 2019</span>
+                            <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                         </div>
                     </div>
                     <div class="row">
@@ -149,8 +149,8 @@
                             <div class="blog-item set-bg" data-setbg="img/blog/blog-5.jpg">
                                 <div class="bi-tag bg-gradient">Design</div>
                                 <div class="bi-text">
-                                    <h5><a href="./blog-details.html">The Biggest Stories Of January 06, 2019</a></h5>
-                                    <span><i class="fa fa-clock-o"></i> 19th May, 2019</span>
+                                    <h5><a href="./blog-details.html">The Biggest Stories Of January 06, 2024</a></h5>
+                                    <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                                 </div>
                             </div>
                         </div>
@@ -159,7 +159,7 @@
                                 <div class="bi-tag bg-gradient">UX/UI</div>
                                 <div class="bi-text">
                                     <h5><a href="./blog-details.html">Alexa Can Now Show You Things!</a></h5>
-                                    <span><i class="fa fa-clock-o"></i> 19th May, 2019</span>
+                                    <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                                 </div>
                             </div>
                         </div>
@@ -168,7 +168,7 @@
                         <div class="bi-tag bg-gradient">Marketing</div>
                         <div class="bi-text">
                             <h3><a href="./blog-details.html">"Still Waiting For BJP To Make Me Chief Minister": Goa Assembly Speaker</a></h3>
-                            <span><i class="fa fa-clock-o"></i> 19th May, 2019</span>
+                            <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                         </div>
                     </div>
                 </div>
