--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
                     <ul>
                         <li class="active"><a href="./index.html">Home</a></li>
                         <li><a href="./about-us.html">About</a></li>
+                        <li><a href="./pricing.html">Pricing</a>
                         <li><a href="./speaker.html">Speakers</a>
                             <ul class="dropdown">
-                                <li><a href="#">Jayden</a></li>
-                                <li><a href="#">Sara</a></li>
-                                <li><a href="#">Emma</a></li>
-                                <li><a href="#">Harriet</a></li>
+                                <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
+                                <li><a href="./speaker.html">Dr. Abiot Sinamo</a></li>
                             </ul>
                         </li>
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
@@ -70,9 +69,9 @@
             <div class="row">
                 <div class="col-lg-7">
                     <div class="hero-text">
-                        <span>5 to 9 may 2019, mardavall hotel, New York</span>
+                        <span>5 to 9 may 2024, mardavall hotel, New York</span>
                         <h2>Change Your Mind<br /> To Become Sucess</h2>
-                        <a href="#" class="primary-btn">Buy Ticket</a>
+                        <a href="#" class="primary-btn">Register</a>
                     </div>
                 </div>
                 <div class="col-lg-5">
@@ -217,20 +216,6 @@
                 <span>Speaker</span>
             </div>
         </div>
-        <div class="member-item set-bg" data-setbg="img/team-member/member-5.jpg">
-            <div class="mi-social">
-                <div class="mi-social-inner bg-gradient">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                </div>
-            </div>
-            <div class="mi-text">
-                <h5>Emma Sandoval</h5>
-                <span>Speaker</span>
-            </div>
-        </div>
     </section>
     <!-- Team Member Section End -->
 
@@ -252,31 +237,31 @@
                             <li class="nav-item">
                                 <a class="nav-link active" data-toggle="tab" href="#tabs-1" role="tab">
                                     <h5>Day 1</h5>
-                                    <p>May 04, 2019</p>
+                                    <p>May 04, 2024</p>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab">
                                     <h5>Day 2</h5>
-                                    <p>May 05, 2019</p>
+                                    <p>May 05, 2024</p>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab">
                                     <h5>Day 3</h5>
-                                    <p>May 06, 2019</p>
+                                    <p>May 06, 2024</p>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tabs-4" role="tab">
                                     <h5>Day 4</h5>
-                                    <p>May 07, 2019</p>
+                                    <p>May 07, 2024</p>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tabs-5" role="tab">
                                     <h5>Day 5</h5>
-                                    <p>May 08, 2019</p>
+                                    <p>May 08, 2024</p>
                                 </a>
                             </li>
                         </ul><!-- Tab panes -->
@@ -946,7 +931,7 @@
                         <div class="li-tag">Marketing</div>
                         <div class="li-text">
                             <h4><a href="./blog-details.html">Improve You Business Cards And Enchan Your Sales</a></h4>
-                            <span><i class="fa fa-clock-o"></i> 19th May, 2019</span>
+                            <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                         </div>
                     </div>
                 </div>
@@ -955,14 +940,14 @@
                         <div class="li-tag">Experience</div>
                         <div class="li-text">
                             <h5><a href="./blog-details.html">All users on MySpace will know that there are millions of people out there.</a></h5>
-                            <span><i class="fa fa-clock-o"></i> 19th May, 2019</span>
+                            <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                         </div>
                     </div>
                     <div class="latest-item set-bg" data-setbg="img/blog/latest-b/latest-3.jpg">
                         <div class="li-tag">Marketing</div>
                         <div class="li-text">
                             <h5><a href="./blog-details.html">A Pocket PC is a handheld computer, which features many of the same capabilities.</a></h5>
-                            <span><i class="fa fa-clock-o"></i> 19th May, 2019</span>
+                            <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                         </div>
                     </div>
                 </div>
