--- a/pricing.html
+++ b/pricing.html
@@ -10,8 +10,7 @@
     <title>Manup | Template</title>
 
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" rel="stylesheet">
 
 
@@ -32,7 +31,7 @@
     </div>
 
     <!-- Header Section Begin -->
-    <header class="header-section">
+    <header class="header-section header-normal">
         <div class="container">
             <div class="logo">
                 <a href="./index.html">
@@ -44,116 +43,134 @@
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./about-us.html">About</a></li>
-                        <li><a href="./speaker.html">Speakers</a>
-                            <ul class="dropdown">
-                                <li><a href="#">Jayden</a></li>
-                                <li><a href="#">Sara</a></li>
-                                <li><a href="#">Emma</a></li>
-                                <li><a href="#">Harriet</a></li>
-                            </ul>
-                        </li>
+                        <li class="active"><a href="./pricing.html">Pricing</a>
+                            <li><a href="./speaker.html">Speakers</a>
+                                <ul class="dropdown">
+                                    <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
+                                    <li><a href="./speaker.html">Dr. Abiot Sinamo</a></li>
+                                </ul>
+                            </li>
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
                         <!-- <li><a href="./blog.html">Blog</a></li> -->
-                        <!-- <li class="active"><a href="./contact.html">Contacts</a></li> -->
+                        <!-- <li><a href="./contact.html">Contacts</a></li> -->
                     </ul>
                 </nav>
-                <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a>
+                <!-- <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a> -->
             </div>
             <div id="mobile-menu-wrap"></div>
         </div>
     </header>
     <!-- Header End -->
 
-    <!-- Contact Top Content Section Begin -->
-    <section class="contact-content-section">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="cc-text set-bg" data-setbg="img/contact-content-bg.jpg">
-                        <div class="row">
-                            <div class="col-lg-8 offset-lg-4">
-                                <div class="section-title">
-                                    <h2>Location</h2>
-                                    <p>Get directions to our event center</p>
-                                </div>
-                                <div class="cs-text">
-                                    <div class="ct-address">
-                                        <span>Address:</span>
-                                        <p>01 Pascale Springs Apt. 339, NY City <br />United State</p>
-                                    </div>
-                                    <ul>
-                                        <li>
-                                            <span>Phone:</span>
-                                            (+12)-345-67-8910
-                                        </li>
-                                        <li>
-                                            <span>Email:</span>
-                                            info.colorlib@gmail.com
-                                        </li>
-                                    </ul>
-                                    <div class="ct-links">
-                                        <span>Website:</span>
-                                        <p>https://conference.colorlib.com</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="cc-map">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105718.20476932525!2d-118.28504975143346!3d34.10298127166687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c6badc8521ad%3A0x7ad323479ca23922!2sNortheast%20Los%20Angeles%2C%20Los%20Angeles%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1579884986183!5m2!1sen!2sbd"
-                            height="580" style="border:0;" allowfullscreen=""></iframe>
-                        <div class="map-hover">
-                            <i class="fa fa-map-marker"></i>
-                            <div class="map-hover-inner">
-                                <h5>01 Pascale SP Apt. 339</h5>
-                                <p>NewYork City, US</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Contact Top Content Section End -->
-
-    <!-- Contact Form Section Begin -->
-    <section class="contact-from-section spad">
+    <!-- Pricing Section Begin -->
+    <section class="pricing-section set-bg spad" data-setbg="img/pricing-bg.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <h2>Contact Us By Email!</h2>
-                        <p>Fill out the form below to recieve a free and confidential intial consultation.</p>
+                        <h2>Ticket Pricing</h2>
+                        <p>Get your event ticket plan</p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
-                    <form action="#" class="comment-form contact-form">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <input type="text" placeholder="Name">
-                            </div>
-                            <div class="col-lg-4">
-                                <input type="text" placeholder="Email">
-                            </div>
-                            <div class="col-lg-4">
-                                <input type="text" placeholder="Phone">
-                            </div>
-                            <div class="col-lg-12 text-center">
-                                <textarea placeholder="Messages"></textarea>
-                                <button type="submit" class="site-btn">Send Message</button>
-                            </div>
+                <div class="col-lg-4">
+                    <div class="price-item">
+                        <h4>1 Day Pass</h4>
+                        <div class="pi-price">
+                            <h2><span>$</span>129</h2>
                         </div>
-                    </form>
+                        <ul>
+                            <li>One Day Conference Ticket</li>
+                            <li>Coffee-break</li>
+                            <li>Lunch and Networking</li>
+                            <li>Keynote talk</li>
+                            <li>Talk to the Editors Session</li>
+                        </ul>
+                        <a href="#" class="price-btn">Get Ticket <span class="arrow_right"></span></a>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="price-item top-rated">
+                        <div class="tr-tag">
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>Full Pass</h4>
+                        <div class="pi-price">
+                            <h2><span>$</span>199</h2>
+                        </div>
+                        <ul>
+                            <li>One Day Conference Ticket</li>
+                            <li>Coffee-break</li>
+                            <li>Lunch and Networking</li>
+                            <li>Keynote talk</li>
+                            <li>Talk to the Editors Session</li>
+                            <li>Lunch and Networking</li>
+                            <li>Keynote talk</li>
+                        </ul>
+                        <a href="#" class="price-btn">Get Ticket <span class="arrow_right"></span></a>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="price-item">
+                        <h4>Group Pass</h4>
+                        <div class="pi-price">
+                            <h2><span>$</span>79</h2>
+                        </div>
+                        <ul>
+                            <li>One Day Conference Ticket</li>
+                            <li>Coffee-break</li>
+                            <li>Lunch and Networking</li>
+                            <li>Keynote talk</li>
+                            <li>Talk to the Editors Session</li>
+                        </ul>
+                        <a href="#" class="price-btn">Get Ticket <span class="arrow_right"></span></a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Contact Form Section End -->
+    <!-- Pricing Section End -->
+
+    <!-- Contact Section Begin -->
+    <section class="contact-section spad">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="section-title">
+                        <h2>Location</h2>
+                        <p>Get directions to our event center</p>
+                    </div>
+                    <div class="cs-text">
+                        <div class="ct-address">
+                            <span>Address:</span>
+                            <p>01 Pascale Springs Apt. 339, NY City <br/>United State</p>
+                        </div>
+                        <ul>
+                            <li>
+                                <span>Phone:</span>
+                                (+12)-345-67-8910
+                            </li>
+                            <li>
+                                <span>Email:</span>
+                                info.colorlib@gmail.com
+                            </li>
+                        </ul>
+                        <div class="ct-links">
+                            <span>Website:</span>
+                            <p>https://conference.colorlib.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="cs-map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52901.38789495531!2d-118.19465514866786!3d34.03523211493029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2cf71ad83ff9f%3A0x518b28657f4543b7!2sEast%20Los%20Angeles%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1579763856144!5m2!1sen!2sbd" height="400" style="border:0;" allowfullscreen=""></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Contact Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer-section">
